welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: '<-' expected but ')' found.
for (i<1 to n) {recule()}
             ^Variables:7: error: illegal start of simple expression
	}
        ^