welcome.lessons.welcome.variables.Variables.scala.code
var n:Int=0
while (!estSurBiscuit()){n=n+1;avance()}
prendBiscuit()
for (i<1 to n) {recule()}
